--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -3,7 +3,7 @@ version: '3.1'
 services:
   go-healthcheck:
     build: .
-    image: go-healthcheck
+    image: ghiltoniel/go-healthcheck
     ports:
       - 8080:8080
     depends_on:
