--- a/.travis.yml
+++ b/.travis.yml
@@ -1,7 +1,11 @@
 language: go
 go:
   - 1.x
+
 before_install:
   - go get -u -v github.com/kardianos/govendor
   - govendor sync
   - govendor install +local 
+
+after_success:
+  - bash <(curl -s https://codecov.io/bash)
