--- a/.travis.yml
+++ b/.travis.yml
@@ -1,11 +1,15 @@
 language: go
 go:
-  - 1.x
+  - 1.9.x
+  - tip
 
 before_install:
   - go get -u -v github.com/kardianos/govendor
   - govendor sync
   - govendor install +local 
+
+script:
+  - go test -race -coverprofile=coverage.txt -covermode=atomic
 
 after_success:
   - bash <(curl -s https://codecov.io/bash)
